{{$NEXT}}

- All exceptions now include a stack trace by default when treated as a
  string. This makes finding where validation failed a lot easier. Fixes GH
  #18.


0.24     2017-04-08

- The source_for() exported by Params::ValidationCompiler did not work at
  all. Reported by Diab Jerius. GH #16.


0.23     2017-01-23

- Trying to create a validator for positional parameters where a required
  param came after one with a default did not throw an exception.

- A positional params validator with a slurpy type which had coercions did not
  return the coerced values. It returned the original values instead.


0.22     2016-12-31

- Explicitly load the B module. Previously the code relied on this already
  being loaded by something else. Fixed by Tomasz Konojacki. PR #11.

- Removed the alpha warning from the docs.


0.21     2016-12-06

- Switched to using GitHub issues.


0.20     2016-12-05

- The keys for parameter specifications are now validated. If an unknown key
  is seen then an exception will be thrown. This will help you catch typos in
  your parameter specification. Implemented by Greg Oschwald. PR #8.


0.19     2016-11-21

- Non-inlinable Specio types caused a syntax error when used with positional
  params.

- Positional params with coercions and defaults did not work properly. The
  coerced value and the default would simply not be returned in any case.


0.18     2016-11-13

- Using coercions with positional parameters could cause a "Modification of a
  read-only value attempted" exception when the generated code tried to assign
  to elements of @_. This is now fixed by making a copy if any of the types
  have a coercion.

- Using Moose types with coercions in a positional params check would cause
  invalid code to be generated. This could also happen with Type::Tiny if
  either the type or a coercion could not be inlined.


0.17     2016-11-04

- When using positional parameters, parameters with a default are now