@@ -197,6 +197,9 @@ If this is given, then the generated subroutine will be named using
 L<Sub::Util>. This is strongly recommended as it makes it possible to
 distinguish different check subroutines when profiling or in stack traces.
 
+This name will also be used in some exception messages, even if L<Sub::Util>
+is not available.
+
 Note that you must install L<Sub::Util> yourself separately, as it is not
 required by this distribution, in order to avoid requiring a compiler.
 
